<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/headerRelativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/headerLogoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/phrase_box"
            android:contentDescription="@string/content_description"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/headerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:shadowColor="#AA0000"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:text="@string/header_title"
            android:textColor="@color/title_text_color"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/headerLogoImageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/phrase_box"
            android:contentDescription="@string/content_description"
            android:src="@drawable/icon" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/buttonTableLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerRelativeLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="20dp"
        android:stretchColumns="0,1"
        android:weightSum="1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/playerNameEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:ems="10" 
                android:hint="@string/name_label">
                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/startGameButton"
                android:layout_width="@dimen/start_button_width"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:onClick="onClick"
                android:text="@string/start_game" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/categoriesButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/category_button" />
            <Button
                android:id="@+id/optionsButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/option_button" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/modeButton"
                android:layout_width="@dimen/start_button_width"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:onClick="onClick"
                android:text="@string/mode_button" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/instructionButton"
                android:layout_width="@dimen/start_button_width"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:onClick="onClick"
                android:text="@string/instruction_button" />
        </TableRow>
    </TableLayout>
</RelativeLayout>